kubernetes/applications/ceph-storage/manifests/apprise/apprise-namespace.yml
# =====================================
# 0. Namespace for Apprise
# =====================================
---
apiVersion: v1
kind: Namespace
metadata:
  name: apprise
