kubernetes/applications/ceph-storage/manifests/apprise/apprise-authentik-outpost-ingress.yml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apprise-authentik-outpost-ingress
  namespace: authentik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - apprise.example.com
  rules:
    - host: apprise.example.com
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: authentik-server-app
                port:
                  number: 80
